samples/_failures_safe/1761149565_fa0625_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28e56357.c: In function ‘main’:
./samples/SAFE/__tmp_28e56357.c:165:9: error: expected declaration or statement at end of input
  165 |         case 3:
      |         ^~~~
./samples/SAFE/__tmp_28e56357.c:165:9: error: expected declaration or statement at end of input
